# shelv

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASES.md  _rust-toolchain.toml  rust-toolchain.toml  site_content_outline.md  site_content_template.md
.github/workflows/: build_and_test.yml  fly.yml  release.yml
assets/: TrayIcon.icns  privacy-policy.md  shelv-app-icon.icns
assets/for_app_store/: instructions.md  screenshot-1.md  screenshot-3.md
dioxus-site/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  fly.toml  index.html
dioxus-site/assets/: tailwind.css
dioxus-site/src/: home_page.rs  main.rs  main_.rs  theme.js  theme.ts
distribution/: build_release.sh  discord_invite.txt  entitlements.xml  upload_to_testflight.sh  validate_package.sh
distribution/assets/: how-to-make-app-icons.md
distribution/assets/for_app_store/: screenshot-2.md  screenshot-3.md
docs/meetings/: standup-09-10-2024.md  standup-09-11-2024.md  standup-10-01-2024
docs/notes/: apple-app-store-notes.md  file-system-persistence.md  post-live-blocks--plan.md  useful-tech-links.md
docs/scratchpad/: copy-focussed-text-feature.md  default-note-2.md  default-note-3.md  default-note-4.md  indie-vc-email.md  indie-vc.md  yc-application.md
lib/: Cargo.toml
lib/src/: lib.rs  picker.rs  theme.rs
shared/: Cargo.toml
shared/src/: lib.rs
site/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  app.css  bacon.toml  fly.toml  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js  tsconfig.json
site-rs/: Cargo.toml  Dioxus.toml  tailwind.config.js
site-rs/src/: home_page.rs  main.rs  nord.ts
site/assets/: app.css
site/src/: App.tsx  Logo.tsx  index.html  index.tsx  main.rs  nord.js  proxy.rs  rate_limiting.rs  ssr.ts  theme.js  theme.ts
src/: app.rs  app_actions.rs  app_io.rs  app_state.rs  app_ui.rs  byte_span.rs  command.rs  commands.rs  feedback.rs  knus_test.rs  main.rs  md_shortcut.rs  nord.rs  persistent_state.rs  picker.rs  scripting.rs  settings.rs  settings_eval.rs  settings_parsing.rs  shared.rs  system_io.rs  taffy_styles.rs  text_structure.rs  theme.rs  ui_components.rs
src/commands/: enter_in_list.rs  inline_llm_prompt.rs  insert_text.rs  kdl_lang.rs  mod.rs  run_llm.rs  slash_pallete.rs  space_after_task_markers.rs  tabbing_in_list.rs  toggle_code_block.rs  toggle_md_headings.rs  toggle_simple_md_annotations.rs
src/default-notes/: deafault-note-1.md  default-note-1.md  default-note-2.md  default-note-3.md  default-note-4.md  default-settings.md  shelv-system-prompt.md  tutorial.md
src/effects/: mod.rs  text_change_effect.rs
src/egui_hotkey/: README.md  binding.rs  mod.rs
src/prompts/: inline-prompt-system-extra.md  inline-prompt-user.md  shelv-system-prompt.md
src/scratchpad/: shelv-api-ideas.md
src/scripting/: js_console_logger.rs  js_module_loader.rs  mod.rs  note_eval.rs  note_eval_context.rs  settings_eval.rs
