[package]
name = "shelv"
version = "0.1.0"
edition = "2021"
description = "Note taking app optimized for capturing phase."

[dependencies]
# eframe = { path = "../../pub-frameworks/contributing/egui/crates/eframe", features = [
#   "wgpu",
#   "persistence",
#   "ron",
# ] }
# egui_extras = { path = "../../pub-frameworks/contributing/egui/crates/egui_extras", features = [
#   "svg",
# ] }

# eframe = { git = "https://github.com/twop/egui", branch = "configurable-window", features = [
#   "wgpu",
#   "persistence",
#   "ron",
# ] }

# egui_extras = { git = "https://github.com/twop/egui", branch = "configurable-window", features = [
#   "svg",
# ] }

eframe = { version = "0.27.2", default-features = false, features = [
    "wgpu",
    "persistence",
    "ron",
] }
egui_extras = { version = "0.27.2", features = ["svg"] }
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8"
global-hotkey = "0.5.3"
image = "0.25.1"
pulldown-cmark = "0.11.0"
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
smallvec = "1.10.0"
tray-icon = "0.14.0"
egui-phosphor = { version = "0.5.0", features = ["light"] }
# tray-item = "0.7.1"
winit = "0.29.15"
linkify = "0.10.0"
objc2 = "0.5.1"
boa_engine = "0.18.0"
serde_json = "1.0.115"
directories-next = "2.0.0"
hotwatch = "0.5.0"
itertools = "0.13.0"
kdl = { version = "4.6.0" }
miette = { version = "5.10.0", features = ["fancy"] }

[patch.crates-io]
winit = { git = 'https://github.com/mpasalic/winit-no-private-apis.git', branch = "remove-private-apis" }

[package.metadata.bundle]
name = "Shelv"
identifier = "app.shelv"
icon = ["assets/TrayIcon.icns"]
version = "1.1.0"
osx_minimum_system_version = "12.0"
resources = ["assets"]
copyright = "Copyright (c) Simon Korzunov 2023. All rights reserved."
category = "Productivity"
short_description = "Note taking app optimized for capturing phase."
long_description = """
Note taking app optimized for capturing phase.
"""


