# [workspace]
# members = ["dioxus-site"]

[package]
name = "shelv"
version = "1.2.1"
edition = "2021"
description = "Note taking app optimized for capturing phase."

[dependencies]
# eframe = { path = "../../pub-frameworks/contributing/egui/crates/eframe", features = [
#   "wgpu",
#   "persistence",
#   "ron",
# ] }
# egui_extras = { path = "../../pub-frameworks/contributing/egui/crates/egui_extras", features = [
#   "svg",
# ] }

# eframe = { git = "https://github.com/twop/egui", branch = "configurable-window", features = [
#   "wgpu",
#   "persistence",
#   "ron",
# ] }

# egui_extras = { git = "https://github.com/twop/egui", branch = "configurable-window", features = [
#   "svg",
# ] }

eframe = { version = "0.29.1", default-features = false, features = [
    "wgpu",
    "persistence",
] }
egui_extras = { version = "0.29.1", features = ["svg"] }
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8"
global-hotkey = "0.5.3"
image = "0.25.1"
pulldown-cmark = "0.11.0"
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
smallvec = "1.10.0"
tray-icon = "0.14.0"
egui-phosphor = { version = "0.7.1", features = ["light"] }
# tray-item = "0.7.1"
winit = "0.30.5"
linkify = "0.10.0"
objc2 = "0.5.1"
boa_engine = "0.19.1"
boa_parser = "0.19.1"
serde_json = "1.0.115"
directories-next = "2.0.0"
hotwatch = "0.5.0"
itertools = "0.13.0"
kdl = { version = "4.6.0" }
genai = "0.1.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
sentry = "0.34.0"
fxhash = "0.2.1"
similar = "2.6.0"
tree-sitter-highlight = "0.20.1"
tree-sitter-kdl = "1.1.0"
tree-sitter = "0.20.10"
egui_flex = "0.1.1"
knus = { default-features = false, git = 'https://github.com/twop/knus.git', features = ["derive"], rev = "0bcbd447866a5be7efc9cc4b597f444b7ae822d2"}
# knus = { default-features = false, version = "3.2.0", features = ["derive"] }
# knus = { default-features = false, git = 'https://github.com/TheLostLambda/knus.git', features = [
#     "derive",
# ] }

miette = { version = "7.2.0", features = ["fancy"] }
strip-ansi-escapes = "0.2.0"
boa_runtime = "0.19.1"

[patch.crates-io]
winit = { git = 'https://github.com/mpasalic/winit-no-private-apis.git', branch = "private-apis-removed-for-0.30.5" }

[package.metadata.bundle]
name = "Shelv"
identifier = "app.shelv"
icon = ["assets/TrayIcon.icns"]
osx_minimum_system_version = "12.0"
resources = ["assets"]
copyright = "Copyright (c) Briskmode Labs 2023. All rights reserved."
category = "Productivity"
short_description = "Hackable playground for ephemeral thoughts."
long_description = """
Hackable playground for ephemeral thoughts.
"""
