[package]
name = "dioxus-site"
version = "0.1.0"
authors = ["Simon Korzunov <twop@hey.com>"]
edition = "2021"

# See more initions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
