[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
eframe = { git = "https://github.com/twop/egui", branch = "focus-and-window-builder" }
egui_extras = { git = "https://github.com/twop/egui", branch = "focus-and-window-builder", features = ["svg"] }
# eframe = { path = "../../../pub-frameworks/contributing/egui/crates/eframe", features = ["persistence", "wgpu"] }
# egui_extras = {version = "0.21.0", features = ["svg"] }
global-hotkey = "0.1.2"
image = "0.24.5"
pulldown-cmark = "0.9.2"
smallvec = "1.10.0"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
