[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hyped = "0.1"
enum_router = { git = "https://github.com/swlkr/enum_router" }
tailwind_fuse = { version = "0.3", features = ["variant"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1.0"
futures = "0.3"
dotenvy = { workspace = true }
